# aws-connector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bump_version.yml  tag_repository.yml  verify_input.yml  version_and_release.yml
.github/workflows/scripts/: auto_generate_changelog.sh  auto_versioning.sh  bump_version.sh  bump_version_and_generate_changelog.sh  update_tags.sh  verify_commit_input.sh
config/: config_template.yaml
docs/source/: conf.py  index.rst
old_configs/: setup.cfg  setup.py
src/: aws_connector.py
src/aws_connector/: account_config.py  connector.py  version.py
src/aws_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
