[project]
name = "aws-connector"
description = "AWS connector switch-role tool from central IAM account."
readme = "README.md"
version = "0.2.10"
license = {file = "LICENSE"}
authors = [
  { name="Mick Gortenmulder", email="mickgortenmulder@gmail.com" },
]
maintainers = [
  { name="Mick Gortenmulder", email="mickgortenmulder@gmail.com" },
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/mickgortenmulder/aws-connector"
"Bug Tracker" = "https://github.com/mickgortenmulder/aws-connector/issues"

[tool.poetry]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
pyyaml = "^5.4.1"
simple-term-menu = "^1.2.1"
boto = "^2.49.0"

[build-system]
requires = [
    "setuptools>=63",
    "wheel",
    "pyyaml>=5.4.1",
    "simple-term-menu>=1.2.1",
    "boto>=2.49.0"
]
build-backend = "setuptools.build_meta"
