[bumpversion]
current_version = 0.1.0

[metadata]
name = aws-connector
version = 0.0.6
author = Mick Gortenmulder
author_email = mickgortenmulder@gmail.com
description = AWS connector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mickgortenmulder/aws-connector
project_urls = 
	Bug Tracker = https://github.com/mickgortenmulder/aws-connector/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
